Placed Program under a more specific namespace, and added proper copyright notice in the header of the file.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -35,6 +35,9 @@
   <PropertyGroup>
     <ApplicationIcon>$(SolutionDir)Images\Sandra.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Sandra.UI.WF.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
