--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -46,8 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstrainedMoveResizeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WinUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
