--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -49,8 +49,12 @@
     <Compile Include="ConstrainedMoveResizeForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="LineSegment.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SnappingMdiChildForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="WinUtils.cs" />
   </ItemGroup>
   <ItemGroup>
