--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -50,6 +50,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="LineSegment.cs" />
+    <Compile Include="PlayingBoard.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnappingMdiChildForm.cs">
