--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -53,6 +53,9 @@
     <Compile Include="PlayingBoard.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="PlayingBoardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnappingMdiChildForm.cs">
