--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -50,6 +50,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="LineSegment.cs" />
+    <Compile Include="MdiContainerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="PlayingBoard.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -60,6 +63,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyStore.cs" />
     <Compile Include="SnappingMdiChildForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StandardChessBoardForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="WinUtils.cs" />
