--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -56,6 +56,7 @@
     <Compile Include="PlayingBoard.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="PlayingBoard.EventArgs.cs" />
     <Compile Include="PlayingBoardForm.cs">
       <SubType>Form</SubType>
     </Compile>
