--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -37,6 +37,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChessConstants.cs" />
     <Compile Include="ChessTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecialzedArrays.cs" />
