--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -39,7 +39,9 @@
   <ItemGroup>
     <Compile Include="ChessConstants.cs" />
     <Compile Include="ChessTypes.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Move.cs" />
+    <Compile Include="MoveFormatter.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecializedArrays.cs" />
