Added UpdatableRichTextBox, with BeginUpdate() and EndUpdate() methods to temporarily block it from repainting.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -72,6 +72,9 @@
     <Compile Include="StandardChessBoardForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="UpdatableRichTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WinUtils.cs" />
   </ItemGroup>
   <ItemGroup>
