--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -72,6 +72,7 @@
     <Compile Include="StandardChessBoardForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="UIAction\KeyUIActionMapping.cs" />
     <Compile Include="UIAction\UIAction.cs" />
     <Compile Include="UIAction\UIActionBinding.cs" />
     <Compile Include="UIAction\UIActionHandler.cs" />
