Added KeyUtils.TryExecute() method to find UIActionHandlers which implement user shortcuts, and used it to re-implement ProcessCmdKey() in MdiContainerForm.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ConstrainedMoveResizeForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FocusHelper.cs" />
     <Compile Include="LineSegment.cs" />
     <Compile Include="MdiContainerForm.cs">
       <SubType>Form</SubType>
