Added new UIMenu.cs code file.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -77,6 +77,7 @@
     <Compile Include="UIAction\UIAction.cs" />
     <Compile Include="UIAction\UIActionBinding.cs" />
     <Compile Include="UIAction\UIActionHandler.cs" />
+    <Compile Include="UIAction\UIMenu.cs" />
     <Compile Include="UpdatableRichTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
