--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -50,6 +50,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FocusHelper.cs" />
+    <Compile Include="HandlerIsAnonymousException.cs" />
     <Compile Include="InteractiveGame.cs" />
     <Compile Include="LineSegment.cs" />
     <Compile Include="MdiContainerForm.cs">
@@ -82,6 +83,8 @@
     <Compile Include="UpdatableRichTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="WeakEvent.cs" />
+    <Compile Include="WeakEventInvocationException.cs" />
     <Compile Include="WinUtils.cs" />
   </ItemGroup>
   <ItemGroup>
