Added Sandra.ico to the application's resources as well.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -68,6 +68,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="PropertyStore.cs" />
     <Compile Include="SnappingMdiChildForm.cs">
       <SubType>Form</SubType>
@@ -98,6 +103,12 @@
       <Project>{1b805a61-6e0c-455f-a8cf-343b7915180d}</Project>
       <Name>Sandra.Chess</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
