--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -52,6 +52,9 @@
     <Compile Include="FocusHelper.cs" />
     <Compile Include="HandlerIsAnonymousException.cs" />
     <Compile Include="InteractiveGame.cs" />
+    <Compile Include="InteractiveGame.UIActions.cs">
+      <DependentUpon>InteractiveGame.cs</DependentUpon>
+    </Compile>
     <Compile Include="LineSegment.cs" />
     <Compile Include="MdiContainerForm.cs">
       <SubType>Form</SubType>
@@ -78,6 +81,10 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StandardChessBoardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StandardChessBoardForm.UIActions.cs">
+      <DependentUpon>StandardChessBoardForm.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UIAction\KeyUIActionMapping.cs" />
