--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -47,7 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InteractiveGame.cs" />
-    <Compile Include="InteractiveGame.UIActions.cs" />
+    <Compile Include="InteractiveGame.UIActions.cs">
+      <DependentUpon>InteractiveGame.cs</DependentUpon>
+    </Compile>
     <Compile Include="MdiContainerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,6 +67,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StandardChessBoardForm.UIActions.cs">
+      <DependentUpon>StandardChessBoardForm.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
