--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -43,12 +43,12 @@
   <ItemGroup>
     <Compile Include="ChessConstants.cs" />
     <Compile Include="ChessTypes.cs" />
+    <Compile Include="ColorSquareIndexedArray.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="MoveFormatter.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpecializedArrays.cs" />
     <Compile Include="Variation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
