--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -56,6 +56,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyStore.cs" />
+    <Compile Include="RichTextBox\UpdatableRichTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="SnappingMdiChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,9 +67,6 @@
     <Compile Include="UIAction\UIActionBinding.cs" />
     <Compile Include="UIAction\UIActionHandler.cs" />
     <Compile Include="UIAction\UIMenu.cs" />
-    <Compile Include="UpdatableRichTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="WeakEvent.cs" />
     <Compile Include="WeakEventInvocationException.cs" />
     <Compile Include="WinUtils.cs" />
