--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyStore.cs" />
+    <Compile Include="RichTextBox\SyntaxRenderer.cs" />
     <Compile Include="RichTextBox\UpdatableRichTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
