--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -56,6 +56,10 @@
     <Compile Include="MovesTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="MovesTextBox.UIActions.cs">
+      <DependentUpon>MovesTextBox.cs</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
