Added new code files LocalizedString.cs and Localizer.cs

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -47,6 +47,8 @@
     <Compile Include="FocusHelper.cs" />
     <Compile Include="HandlerIsAnonymousException.cs" />
     <Compile Include="LineSegment.cs" />
+    <Compile Include="Localization\LocalizedString.cs" />
+    <Compile Include="Localization\Localizer.cs" />
     <Compile Include="PlayingBoard.cs">
       <SubType>Component</SubType>
     </Compile>
