Added new code file Localizers.cs.

--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -50,6 +50,7 @@
     <Compile Include="InteractiveGame.UIActions.cs">
       <DependentUpon>InteractiveGame.cs</DependentUpon>
     </Compile>
+    <Compile Include="Localizers.cs" />
     <Compile Include="MdiContainerForm.cs">
       <SubType>Form</SubType>
     </Compile>
