--- a/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
+++ b/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
@@ -55,9 +55,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Sandra\Sandra.csproj">
+    <ProjectReference Include="..\..\SysExtensions\SysExtensions.csproj">
       <Project>{32beb911-9502-4add-8e4d-b44d268a9477}</Project>
-      <Name>Sandra</Name>
+      <Name>SysExtensions</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sandra.Chess.csproj">
       <Project>{1b805a61-6e0c-455f-a8cf-343b7915180d}</Project>
