--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -85,9 +85,9 @@
       <Project>{77da1d85-0062-4caa-af31-49d9a0b16bb2}</Project>
       <Name>Sandra.UI.WF</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Sandra\Sandra.csproj">
+    <ProjectReference Include="..\SysExtensions\SysExtensions.csproj">
       <Project>{32beb911-9502-4add-8e4d-b44d268a9477}</Project>
-      <Name>Sandra</Name>
+      <Name>SysExtensions</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
