--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{32BEB911-9502-4ADD-8E4D-B44D268A9477}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sandra</RootNamespace>
-    <AssemblyName>Sandra</AssemblyName>
+    <RootNamespace>SysExtensions</RootNamespace>
+    <AssemblyName>SysExtensions</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
