--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -40,6 +40,7 @@
     <Compile Include="EnumHelper.cs" />
     <Compile Include="EnumIndexedArray.cs" />
     <Compile Include="LinqExtensions.cs" />
+    <Compile Include="ObservableValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyntaxRenderer\ISyntaxRenderTarget.cs" />
     <Compile Include="SyntaxRenderer\SyntaxRenderer.cs" />
