--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ConstrainedMoveResizeForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CursorFromHandle.cs" />
     <Compile Include="DragUtils.cs" />
     <Compile Include="FocusHelper.cs" />
     <Compile Include="HandlerIsAnonymousException.cs" />
