Created SettingUpdateOperation with API skeleton. Intended usage in MdiContainerForm event handlers.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -60,6 +60,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Settings\AutoSave.cs" />
+    <Compile Include="Settings\SettingUpdateOperation.cs" />
     <Compile Include="SnappingMdiChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
