Added SettingObject class, and expect initial settings to be given when constructing the AutoSave object.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -61,6 +61,7 @@
     </Compile>
     <Compile Include="Settings\AutoSave.cs" />
     <Compile Include="Settings\SettingKey.cs" />
+    <Compile Include="Settings\SettingObject.cs" />
     <Compile Include="Settings\SettingUpdateOperation.cs" />
     <Compile Include="Settings\SettingValue.cs" />
     <Compile Include="SnappingMdiChildForm.cs">
