Moved setting keys to its own file.

--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -68,6 +68,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SettingKeys.cs" />
     <Compile Include="StandardChessBoardForm.cs">
       <SubType>Form</SubType>
     </Compile>
