Added SettingHelper static class for general setting utility methods.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -61,6 +61,7 @@
     </Compile>
     <Compile Include="Settings\AutoSave.cs" />
     <Compile Include="Settings\SettingCopy.cs" />
+    <Compile Include="Settings\SettingHelper.cs" />
     <Compile Include="Settings\SettingKey.cs" />
     <Compile Include="Settings\SettingObject.cs" />
     <Compile Include="Settings\SettingUpdateOperation.cs" />
