--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -64,12 +64,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Settings\AutoSave.cs" />
+    <Compile Include="Settings\PValue.cs" />
     <Compile Include="Settings\SettingCopy.cs" />
     <Compile Include="Settings\SettingHelper.cs" />
     <Compile Include="Settings\SettingKey.cs" />
     <Compile Include="Settings\SettingObject.cs" />
     <Compile Include="Settings\SettingUpdateOperation.cs" />
-    <Compile Include="Settings\SettingValue.cs" />
     <Compile Include="SnappingMdiChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
