Move helper conversion functions to new class PType.RichTextZoomFactor.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Settings\AutoSave.cs" />
     <Compile Include="Settings\PList.cs" />
     <Compile Include="Settings\PMap.cs" />
+    <Compile Include="Settings\PType.Common.cs" />
     <Compile Include="Settings\PType.cs" />
     <Compile Include="Settings\PValue.cs" />
     <Compile Include="Settings\SettingCopy.cs" />
