--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -47,6 +47,7 @@
     <Compile Include="SyntaxRenderer\SyntaxRenderer.cs" />
     <Compile Include="SyntaxRenderer\TextElement.cs" />
     <Compile Include="UtilityExtensions.cs" />
+    <Compile Include="_void.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
