--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Settings\SettingObject.cs" />
     <Compile Include="Settings\SettingProperty.cs" />
     <Compile Include="Settings\SettingReader.cs" />
+    <Compile Include="Settings\SettingsFile.cs" />
     <Compile Include="Settings\SettingWriter.cs" />
     <Compile Include="SnappingMdiChildForm.cs">
       <SubType>Form</SubType>
