Add three PTypes Boolean, Integer and String which are the exact types of PBoolean, PInteger and PString values respectively. Types for PList and PMap are not included right now.

--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Settings\PersistableFormState.cs" />
     <Compile Include="Settings\PList.cs" />
     <Compile Include="Settings\PMap.cs" />
+    <Compile Include="Settings\PType.Base.cs" />
     <Compile Include="Settings\PType.Common.cs" />
     <Compile Include="Settings\PType.cs" />
     <Compile Include="Settings\PValue.cs" />
