--- a/Sandra.UI.WF.Chess/DefaultSettings.json
+++ b/Sandra.UI.WF.Chess/DefaultSettings.json
@@ -1,7 +1,11 @@
 {
-    // Subfolder of %APPDATA%/Local which should be used to store persistent data.
-    // This includes the auto-save file, or e.g. a preferences file.
-    // Use forward slashes to separate directories, an unrecognized escape
-    // sequence such as in "Test\Test" renders the whole file unusable.
-    "app_data_sub_folder_name": "SandraChess"
+  // Subfolder of %APPDATA%/Local which should be used to store persistent data.
+  // This includes the auto-save file, or e.g. a preferences file.
+  // Use forward slashes to separate directories, an unrecognized escape
+  // sequence such as in "Test\Test" renders the whole file unusable.
+  "app_data_sub_folder_name": "SandraChess",
+
+  // The number of plies (=half moves) to move forward of backward in a game for
+  // fast navigation. This value must be between 2 and 40.
+  "fast_navigation_ply_count": 10
 }
