Break up the default setting schema in 2 paragraphs.

--- a/Sandra.UI.WF.Chess/DefaultSettings.json
+++ b/Sandra.UI.WF.Chess/DefaultSettings.json
@@ -1,8 +1,10 @@
 // There are generally two copies of this file, one in the directory where
 // SandraChess.exe is located (Default.settings), and one that lives in the
-// local application data folder. Preferences in the latter file override those
-// that are specified in the default. In the majority of cases, only the latter
-// file is changed, while the default settings serve as a template.
+// local application data folder.
+// 
+// Preferences in the latter file override those that are specified in the
+// default. In the majority of cases, only the latter file is changed, while the
+// default settings serve as a template.
 {
   // Subfolder of %APPDATA%/Local which should be used to store persistent data.
   // This includes the auto-save file, or e.g. a preferences file. Use forward
