Add SaveToFile UIAction to SettingsTextBox.

--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -84,6 +84,10 @@
     <Compile Include="SettingsTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="SettingsTextBox.UIActions.cs">
+      <DependentUpon>SettingsTextBox.cs</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="SharedUIAction.cs" />
     <Compile Include="StandardChessBoardForm.cs">
       <SubType>Form</SubType>
