--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -69,6 +69,7 @@
     </Compile>
     <Compile Include="Storage\AutoSave.cs" />
     <Compile Include="Storage\FileNameType.cs" />
+    <Compile Include="Storage\FileWatcher.cs" />
     <Compile Include="Storage\OpaqueColorType.cs" />
     <Compile Include="Storage\PersistableFormState.cs" />
     <Compile Include="Storage\PList.cs" />
