--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -41,11 +41,11 @@
     <Compile Include="EnumIndexedArray.cs" />
     <Compile Include="LinqExtensions.cs" />
     <Compile Include="ObservableValue.cs" />
-    <Compile Include="OptionValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyntaxRenderer\ISyntaxRenderTarget.cs" />
     <Compile Include="SyntaxRenderer\SyntaxRenderer.cs" />
     <Compile Include="SyntaxRenderer\TextElement.cs" />
+    <Compile Include="Union.cs" />
     <Compile Include="UtilityExtensions.cs" />
     <Compile Include="_void.cs" />
   </ItemGroup>
