--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Storage\AutoSave.cs" />
     <Compile Include="Storage\FileNameType.cs" />
     <Compile Include="Storage\FileWatcher.cs" />
+    <Compile Include="Storage\JsonSyntax.cs" />
+    <Compile Include="Storage\JsonTokenizer.cs" />
     <Compile Include="Storage\OpaqueColorType.cs" />
     <Compile Include="Storage\PersistableFormState.cs" />
     <Compile Include="Storage\PList.cs" />
