Add JsonSyntaxTests class.

--- a/Sandra.UI.WF/Tests/Sandra.UI.WF.Tests.csproj
+++ b/Sandra.UI.WF/Tests/Sandra.UI.WF.Tests.csproj
@@ -65,6 +65,7 @@
     </When>
   </Choose>
   <ItemGroup>
+    <Compile Include="JsonSyntaxTests.cs" />
     <Compile Include="JsonTokenizerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
