--- a/Sandra.UI.WF.Chess/DefaultSettings.json
+++ b/Sandra.UI.WF.Chess/DefaultSettings.json
@@ -32,6 +32,10 @@
   // the HTML color format, for example "#DC143C" is the Crimson color.
   "last_move_arrow_color": "#696969",
 
+  // Whether or not to display all legal target squares of a piece when it is
+  // selected.
+  "display_legal_target_squares": true,
+
   // The number of plies (=half moves) to move forward of backward in a game for
   // fast navigation. This value must be between 2 and 40.
   "fast_navigation_ply_count": 10
