--- a/Sandra.UI.WF/Tests/Sandra.UI.WF.Tests.csproj
+++ b/Sandra.UI.WF/Tests/Sandra.UI.WF.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="JsonSyntaxTests.cs" />
     <Compile Include="JsonTokenizerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextErrorInfoTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SysExtensions\SysExtensions.csproj">
