--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -96,6 +96,9 @@
       <DependentUpon>StandardChessBoardForm.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="SyntaxEditor.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UIActionForm.cs">
       <SubType>Form</SubType>
     </Compile>
