--- a/Sandra.UI.WF/Sandra.UI.WF.csproj
+++ b/Sandra.UI.WF/Sandra.UI.WF.csproj
@@ -68,6 +68,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Storage\AutoSave.cs" />
+    <Compile Include="Storage\CompactSettingWriter.cs" />
     <Compile Include="Storage\FileNameType.cs" />
     <Compile Include="Storage\FileWatcher.cs" />
     <Compile Include="Storage\JsonSyntax.cs" />
