--- a/Sandra.UI.WF.Chess/DefaultSettings.json
+++ b/Sandra.UI.WF.Chess/DefaultSettings.json
@@ -11,9 +11,9 @@
   "version": 1,
 
   // Subfolder of %APPDATA%/Local which should be used to store persistent data.
-  // This includes the auto-save file, or e.g. a preferences file. Use forward
-  // slashes to separate directories, an unrecognized escape sequence such as in
-  // "Test\Test" renders the whole file unusable.
+  // This includes the auto-save file, or e.g. a preferences file. Backward
+  // slashes ('\') must be escaped in json strings (e.g. "C:\\Temp\\temp.txt").
+  // Instead, forward slashes ('/') can be used to separate directories as well.
   "app_data_sub_folder_name": "SandraChess",
 
   // File name in the %APPDATA%/Local subfolder which contains the user-specific
