Add 16x16 settings icon.

--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\globe.png" />
+    <None Include="Properties\settings.png" />
     <Content Include="Sandra.ico" />
   </ItemGroup>
   <ItemGroup>
