Add 16x16 flip icon.

--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <None Include="Properties\copy.png" />
     <None Include="Properties\cut.png" />
+    <None Include="Properties\flip.png" />
     <None Include="Properties\globe.png" />
     <None Include="Properties\paste.png" />
     <None Include="Properties\save.png" />
