Derive SyntaxEditor from UpdatableRichTextBox directly rather than from RichTextBoxEx.

--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -100,6 +100,10 @@
     <Compile Include="SyntaxEditor.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="SyntaxEditor.UIActions.cs">
+      <SubType>Component</SubType>
+      <DependentUpon>SyntaxEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="UIActionForm.cs">
       <SubType>Form</SubType>
     </Compile>
