--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -42,7 +42,23 @@
     <Compile Include="LinqExtensions.cs" />
     <Compile Include="ObservableValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Text\Json\JsonColon.cs" />
+    <Compile Include="Text\Json\JsonComma.cs" />
+    <Compile Include="Text\Json\JsonComment.cs" />
+    <Compile Include="Text\Json\JsonCurlyClose.cs" />
+    <Compile Include="Text\Json\JsonCurlyOpen.cs" />
+    <Compile Include="Text\Json\JsonErrorString.cs" />
+    <Compile Include="Text\Json\JsonSquareBracketClose.cs" />
+    <Compile Include="Text\Json\JsonSquareBracketOpen.cs" />
+    <Compile Include="Text\Json\JsonString.cs" />
+    <Compile Include="Text\Json\JsonSymbol.cs" />
+    <Compile Include="Text\Json\JsonSymbolVisitor.cs" />
+    <Compile Include="Text\Json\JsonTokenizer.cs" />
+    <Compile Include="Text\Json\JsonUnknownSymbol.cs" />
+    <Compile Include="Text\Json\JsonUnterminatedMultiLineComment.cs" />
+    <Compile Include="Text\Json\JsonValue.cs" />
     <Compile Include="Text\TextElement.cs" />
+    <Compile Include="Text\TextErrorInfo.cs" />
     <Compile Include="Text\TextIndex.cs" />
     <Compile Include="Union.cs" />
     <Compile Include="UtilityExtensions.cs" />
