Rename Default.settings to DefaultSettings.json, since the Windows default is to not display extensions.

--- a/Sandra.UI.WF.Chess/DefaultSettings.json
+++ b/Sandra.UI.WF.Chess/DefaultSettings.json
@@ -1,5 +1,5 @@
 // There are generally two copies of this file, one in the directory where
-// SandraChess.exe is located (Default.settings), and one that lives in the
+// SandraChess.exe is located (DefaultSettings.json), and one that lives in the
 // local application data folder.
 //
 // Preferences in the latter file override those that are specified in the
