Add JsonErrorCode enumeration.

--- a/SysExtensions/SysExtensions.csproj
+++ b/SysExtensions/SysExtensions.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Text\Json\JsonComment.cs" />
     <Compile Include="Text\Json\JsonCurlyClose.cs" />
     <Compile Include="Text\Json\JsonCurlyOpen.cs" />
+    <Compile Include="Text\Json\JsonErrorCode.cs" />
     <Compile Include="Text\Json\JsonErrorString.cs" />
     <Compile Include="Text\Json\JsonSquareBracketClose.cs" />
     <Compile Include="Text\Json\JsonSquareBracketOpen.cs" />
