Add SettingsForm class and move all errorsTextBox/settingsTextBox code.

--- a/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
+++ b/Sandra.UI.WF.Chess/Sandra.UI.WF.Chess.csproj
@@ -56,9 +56,12 @@
     <Compile Include="InteractiveGame.UIActions.cs">
       <DependentUpon>InteractiveGame.cs</DependentUpon>
     </Compile>
-    <Compile Include="ListBoxEx.cs" />
+    <Compile Include="ListBoxEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ListBoxEx.UIActions.cs">
       <DependentUpon>ListBoxEx.cs</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Localizers.cs" />
     <Compile Include="MdiContainerForm.cs">
@@ -90,6 +93,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Settings.cs" />
+    <Compile Include="SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SettingsTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
